--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
   "author": "Nando Vieira",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
-    "babel-preset-env": "^1.5.2",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
-    "eslint": "4.0.0",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "glob": "^7.1.2",
-    "node-sass": "^4.5.3",
-    "null-loader": "^0.1.1",
-    "postcss-loader": "^2.0.6",
-    "resolve-url-loader": "^2.0.3",
-    "sass-loader": "^6.0.6",
-    "webpack": "2.6.1",
-    "webpack-assets-manifest": "^0.7.0",
-    "webpack-merge": "^4.1.0"
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.0",
+    "clean-webpack-plugin": "0.1.16",
+    "css-loader": "0.28.7",
+    "eslint": "4.6.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-babel": "4.1.2",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "glob": "7.1.2",
+    "node-sass": "4.5.3",
+    "null-loader": "0.1.1",
+    "postcss-loader": "2.0.6",
+    "resolve-url-loader": "2.1.0",
+    "sass-loader": "6.0.6",
+    "webpack": "3.5.6",
+    "webpack-assets-manifest": "1.0.0",
+    "webpack-merge": "4.1.0"
   }
 }
