--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "2.0.8",
     "resolve-url-loader": "2.1.1",
     "sass-loader": "6.0.6",
+    "uglifyjs-webpack-plugin": "1.1.0",
     "webpack": "3.8.1",
     "webpack-assets-manifest": "1.0.0",
     "webpack-merge": "4.1.0"
