--- a/package.json
+++ b/package.json
@@ -9,26 +9,33 @@
   "author": "Nando Vieira",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.0.2",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.1",
-    "clean-webpack-plugin": "0.1.17",
-    "css-loader": "0.28.7",
-    "eslint": "4.11.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-babel": "4.1.2",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "glob": "7.1.2",
-    "node-sass": "4.7.2",
-    "null-loader": "0.1.1",
-    "postcss-loader": "2.0.8",
-    "resolve-url-loader": "2.2.0",
-    "sass-loader": "6.0.6",
-    "uglifyjs-webpack-plugin": "1.1.0",
-    "webpack": "3.8.1",
-    "webpack-assets-manifest": "1.0.0",
-    "webpack-merge": "4.1.1"
+    "@babel/core": "7.0.x",
+    "@babel/preset-env": "7.0.x",
+    "@babel/preset-react": "7.0.x",
+    "@babel/plugin-proposal-function-bind": "7.0.x",
+    "@babel/plugin-proposal-class-properties": "7.0.x",
+    "babel-eslint": "9.0.x",
+    "babel-loader": "8.0.x",
+    "clean-webpack-plugin": "0.1.x",
+    "css-loader": "1.0.x",
+    "eslint": "5.5.x",
+    "eslint-loader": "2.1.x",
+    "eslint-plugin-babel": "5.2.x",
+    "eslint-plugin-react": "7.11.x",
+    "mini-css-extract-plugin": "0.4.x",
+    "file-loader": "2.0.x",
+    "glob": "7.1.x",
+    "node-sass": "4.9.x",
+    "null-loader": "0.1.x",
+    "postcss-loader": "3.0.x",
+    "react": "16.4.x",
+    "react-dom": "16.4.x",
+    "resolve-url-loader": "3.0.x",
+    "sass-loader": "7.1.x",
+    "uglifyjs-webpack-plugin": "2.0.x",
+    "webpack": "4.19.x",
+    "webpack-cli": "3.1.x",
+    "webpack-assets-manifest": "3.0.x",
+    "webpack-merge": "4.1.x"
   }
 }
