--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "7.0.x",
     "@babel/plugin-proposal-function-bind": "7.0.x",
     "@babel/plugin-proposal-class-properties": "7.0.x",
+    "autoprefixer": "9.1.x",
     "babel-eslint": "9.0.x",
     "babel-loader": "8.0.x",
     "clean-webpack-plugin": "0.1.x",
