Add @babel/runtime dependency.

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "7.0.x",
+    "@babel/plugin-proposal-class-properties": "7.0.x",
+    "@babel/plugin-proposal-function-bind": "7.0.x",
+    "@babel/plugin-transform-runtime": "7.1.x",
     "@babel/preset-env": "7.0.x",
     "@babel/preset-react": "7.0.x",
-    "@babel/plugin-proposal-function-bind": "7.0.x",
-    "@babel/plugin-proposal-class-properties": "7.0.x",
-    "@babel/plugin-transform-runtime": "7.1.x",
+    "@babel/runtime": "7.0.x",
     "autoprefixer": "9.1.x",
     "babel-eslint": "9.0.x",
     "babel-loader": "8.0.x",
