--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "node-sass": "4.9.x",
     "null-loader": "0.1.x",
     "postcss-loader": "3.0.x",
-    "react": "16.4.x",
-    "react-dom": "16.4.x",
+    "react": "x",
+    "react-dom": "x",
     "resolve-url-loader": "3.0.x",
     "sass-loader": "7.1.x",
     "uglifyjs-webpack-plugin": "2.0.x",
