--- a/templates/.babelrc
+++ b/templates/.babelrc
@@ -7,5 +7,10 @@
     "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-class-properties",
     ["@babel/plugin-proposal-function-bind", {"loose": true}]
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["require-context-hook"]
+    }
+  }
 }
