--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin" : {
-    "webpack-rails-install" : "./bin/install"
+  "bin": {
+    "webpack-rails-install": "./bin/install"
   },
   "author": "Nando Vieira",
   "license": "MIT",
@@ -22,11 +22,15 @@
     "@babel/runtime": "7.0.x",
     "@storybook/addon-actions": "4.x",
     "@storybook/addon-links": "4.x",
+    "@storybook/addon-storyshots": "4.1.4",
     "@storybook/cli": "4.x",
     "@storybook/react": "4.x",
     "autoprefixer": "9.1.x",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.x",
+    "babel-jest": "23.x",
     "babel-loader": "8.0.x",
+    "babel-plugin-require-context-hook": "1.0.0",
     "clean-webpack-plugin": "0.1.x",
     "css-loader": "1.0.x",
     "eslint": "5.5.x",
@@ -35,12 +39,14 @@
     "eslint-plugin-react": "7.11.x",
     "file-loader": "2.0.x",
     "glob": "7.1.x",
+    "jest": "23.x",
     "mini-css-extract-plugin": "0.4.x",
     "node-sass": "4.9.x",
     "null-loader": "0.1.x",
     "postcss-loader": "3.0.x",
     "react": "x",
     "react-dom": "x",
+    "react-test-renderer": "x",
     "resolve-url-loader": "3.0.x",
     "sass-loader": "7.1.x",
     "uglifyjs-webpack-plugin": "2.0.x",
