--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Webpack configuration that just works for Rails apps.",
   "main": "index.js",
+  "repository": "https://github.com/fnando/webpack-rails.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
