Be more flexible about versions.

--- a/package.json
+++ b/package.json
@@ -18,47 +18,47 @@
   "author": "Nando Vieira",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "7.0.x",
-    "@babel/plugin-proposal-class-properties": "7.0.x",
-    "@babel/plugin-proposal-function-bind": "7.0.x",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.x",
-    "@babel/plugin-transform-runtime": "7.1.x",
-    "@babel/preset-env": "7.0.x",
-    "@babel/preset-react": "7.0.x",
-    "@babel/runtime": "7.0.x",
+    "@babel/core": "7.x",
+    "@babel/plugin-proposal-class-properties": "7.x",
+    "@babel/plugin-proposal-function-bind": "7.x",
+    "@babel/plugin-proposal-object-rest-spread": "7.x",
+    "@babel/plugin-transform-runtime": "7.x",
+    "@babel/preset-env": "7.x",
+    "@babel/preset-react": "7.x",
+    "@babel/runtime": "7.x",
     "@storybook/addon-actions": "4.x",
     "@storybook/addon-links": "4.x",
-    "@storybook/addon-storyshots": "4.1.4",
+    "@storybook/addon-storyshots": "4.x",
     "@storybook/cli": "4.x",
     "@storybook/react": "4.x",
-    "autoprefixer": "9.1.x",
+    "autoprefixer": "9.x",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.x",
+    "babel-eslint": "9.x",
     "babel-jest": "23.x",
-    "babel-loader": "8.0.x",
-    "babel-plugin-require-context-hook": "1.0.0",
-    "clean-webpack-plugin": "0.1.x",
-    "css-loader": "1.0.x",
-    "eslint": "5.5.x",
-    "eslint-loader": "2.1.x",
-    "eslint-plugin-babel": "5.2.x",
-    "eslint-plugin-react": "7.11.x",
-    "file-loader": "2.0.x",
-    "glob": "7.1.x",
+    "babel-loader": "8.x",
+    "babel-plugin-require-context-hook": "1.x",
+    "clean-webpack-plugin": "0.x",
+    "css-loader": "1.x",
+    "eslint": "5.x",
+    "eslint-loader": "2.x",
+    "eslint-plugin-babel": "5.x",
+    "eslint-plugin-react": "7.x",
+    "file-loader": "2.x",
+    "glob": "7.x",
     "jest": "23.x",
-    "mini-css-extract-plugin": "0.4.x",
-    "node-sass": "4.9.x",
-    "null-loader": "0.1.x",
-    "postcss-loader": "3.0.x",
+    "mini-css-extract-plugin": "0.x",
+    "node-sass": "4.x",
+    "null-loader": "0.x",
+    "postcss-loader": "3.x",
     "react": "x",
     "react-dom": "x",
     "react-test-renderer": "x",
-    "resolve-url-loader": "3.0.x",
-    "sass-loader": "7.1.x",
-    "uglifyjs-webpack-plugin": "2.0.x",
-    "webpack": "4.19.x",
-    "webpack-assets-manifest": "3.0.x",
-    "webpack-cli": "3.1.x",
-    "webpack-merge": "4.1.x"
+    "resolve-url-loader": "3.x",
+    "sass-loader": "7.x",
+    "uglifyjs-webpack-plugin": "2.x",
+    "webpack": "4.x",
+    "webpack-assets-manifest": "3.x",
+    "webpack-cli": "3.x",
+    "webpack-merge": "4.x"
   }
 }
