Loose storybook's version up.

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@babel/preset-env": "7.x",
     "@babel/preset-react": "7.x",
     "@babel/runtime": "7.x",
-    "@storybook/addon-actions": "4.x",
-    "@storybook/addon-links": "4.x",
-    "@storybook/addon-storyshots": "4.x",
-    "@storybook/cli": "4.x",
-    "@storybook/react": "4.x",
+    "@storybook/addon-actions": "x",
+    "@storybook/addon-links": "x",
+    "@storybook/addon-storyshots": "x",
+    "@storybook/cli": "x",
+    "@storybook/react": "x",
     "autoprefixer": "9.x",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.x",
