--- a/templates/.eslintrc
+++ b/templates/.eslintrc
@@ -21,66 +21,66 @@
   },
   "plugins": ["react"],
   "rules": {
-    "array-bracket-spacing": [2, "never"],
-    "arrow-body-style": [2, "as-needed"],
-    "arrow-parens": [2, "as-needed"],
-    "arrow-spacing": [2, {"before": true, "after": true}],
-    "block-scoped-var": 2,
-    "brace-style": [2, "1tbs", {"allowSingleLine": true}],
-    "camelcase": [2, {"properties": "never"}],
-    "comma-dangle": [2, "never"],
-    "comma-spacing": 2,
-    "comma-style": [2, "last"],
-    "computed-property-spacing": [2, "never"],
-    "consistent-this": [2, "self"],
-    "constructor-super": 2,
-    "curly": [2, "all"],
-    "eol-last": 2,
-    "eqeqeq": 2,
-    "indent": [2, 2, {"SwitchCase": 1}],
-    "keyword-spacing": [2, {"before": true, "after": true}],
-    "linebreak-style": [2, "unix"],
-    "max-nested-callbacks": [2, 2],
-    "new-cap": 2,
-    "no-alert": 2,
-    "no-cond-assign": [2, "except-parens"],
-    "no-confusing-arrow": 2,
-    "no-console": 2,
-    "no-debugger": 2,
-    "no-dupe-keys": 2,
-    "no-empty": 2,
-    "no-eq-null": 2,
-    "no-extra-semi": 2,
-    "no-inline-comments": 2,
-    "no-invalid-regexp": 2,
-    "no-irregular-whitespace": 2,
-    "no-lonely-if": 2,
-    "no-mixed-spaces-and-tabs": 2,
-    "no-multi-spaces": 0,
-    "no-multiple-empty-lines": [2, {"max": 2}],
-    "no-nested-ternary": 2,
-    "no-obj-calls": 2,
-    "no-param-reassign": 0,
-    "no-plusplus": 2,
-    "no-self-compare": 2,
-    "no-shadow": 2,
-    "no-spaced-func": 2,
-    "no-throw-literal": 2,
-    "no-trailing-spaces": 2,
-    "no-undef": 2,
-    "no-underscore-dangle": 0,
-    "no-unused-vars": 2,
-    "no-void": 2,
-    "object-curly-spacing": 0,
-    "one-var": [2, "never"],
-    "quote-props": [2, "as-needed"],
-    "quotes": [2, "double", "avoid-escape"],
-    "prefer-rest-params": 2,
-    "prefer-spread": 2,
-    "semi": [2, "always"],
-    "space-before-function-paren": [2, "never"],
-    "space-in-parens": [2, "never"],
-    "spaced-comment": [2, "always"],
-    "template-curly-spacing": [2, "never"]
+    "array-bracket-spacing": ["error", "never"],
+    "arrow-body-style": ["error", "as-needed"],
+    "arrow-parens": ["error", "as-needed"],
+    "arrow-spacing": ["error", {"before": true, "after": true}],
+    "block-scoped-var": "error",
+    "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
+    "camelcase": ["error", {"properties": "never"}],
+    "comma-dangle": ["error", "never"],
+    "comma-spacing": "error",
+    "comma-style": ["error", "last"],
+    "computed-property-spacing": ["error", "never"],
+    "consistent-this": ["error", "self"],
+    "constructor-super": "error",
+    "curly": ["error", "all"],
+    "eol-last": "error",
+    "eqeqeq": "error",
+    "indent": ["error", 2, {"SwitchCase": 1}],
+    "keyword-spacing": ["error", {"before": true, "after": true}],
+    "linebreak-style": ["error", "unix"],
+    "max-nested-callbacks": ["error", 2],
+    "new-cap": "error",
+    "no-alert": "error",
+    "no-cond-assign": ["error", "except-parens"],
+    "no-confusing-arrow": "error",
+    "no-console": "error",
+    "no-debugger": "error",
+    "no-dupe-keys": "error",
+    "no-empty": "error",
+    "no-eq-null": "error",
+    "no-extra-semi": "error",
+    "no-inline-comments": "error",
+    "no-invalid-regexp": "error",
+    "no-irregular-whitespace": "error",
+    "no-lonely-if": "error",
+    "no-mixed-spaces-and-tabs": "error",
+    "no-multi-spaces": "off",
+    "no-multiple-empty-lines": ["error", {"max": 2}],
+    "no-nested-ternary": "error",
+    "no-obj-calls": "error",
+    "no-param-reassign": "off",
+    "no-plusplus": "error",
+    "no-self-compare": "error",
+    "no-shadow": "error",
+    "no-spaced-func": "error",
+    "no-throw-literal": "error",
+    "no-trailing-spaces": "error",
+    "no-undef": "error",
+    "no-underscore-dangle": "off",
+    "no-unused-vars": "error",
+    "no-void": "error",
+    "object-curly-spacing": ["error", "always"],
+    "one-var": ["error", "never"],
+    "quote-props": ["error", "as-needed"],
+    "quotes": ["error", "double", "avoid-escape"],
+    "prefer-rest-params": "error",
+    "prefer-spread": "error",
+    "semi": ["error", "always"],
+    "space-before-function-paren": ["error", "never"],
+    "space-in-parens": ["error", "never"],
+    "spaced-comment": ["error", "always"],
+    "template-curly-spacing": ["error", "never"]
   }
 }
