Add new babel plugin.

--- a/templates/.babelrc
+++ b/templates/.babelrc
@@ -6,6 +6,7 @@
   "plugins": [
     "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-export-default-from",
     ["@babel/plugin-proposal-function-bind", {"loose": true}]
   ],
   "env": {
