--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/core": "7.x",
     "@babel/plugin-proposal-class-properties": "7.x",
+    "@babel/plugin-proposal-export-default-from": "7.x",
     "@babel/plugin-proposal-function-bind": "7.x",
     "@babel/plugin-proposal-object-rest-spread": "7.x",
     "@babel/plugin-transform-runtime": "7.x",
