--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "7.x",
     "file-loader": "2.x",
     "glob": "7.x",
+    "handlebars-loader": "1.x",
     "jest": "23.x",
     "mini-css-extract-plugin": "0.x",
     "node-sass": "4.x",
